force-app/main/default/objects/Purchase_request__c/Purchase_request__c.object-meta.xml
<CustomObject>
    <label>Purchase Request</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Purchase Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>