force-app/main/default/objects/Purchase_request__c/fields/Purpose_of_use__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_use__c</fullName>
    <label>Purpose of use</label>
    <type>TextArea</type>
</CustomField>