force-app/main/default/objects/Purchase_request__c/fields/Special_instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_instruction__c</fullName>
    <label>Special instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>